@@ -1,3 +1,14 @@
+2003-07-06  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/plugins/BookReport.py: Make a list of options from a tuple.
+	* src/plugins/AncestorReport.py: Register options as a tuple.
+	* src/plugins/Ancestors.py: Register options as a tuple.
+	* src/plugins/DescendReport.py: Register options as a tuple.
+	* src/plugins/FtmStyleAncestors.py: Register options as a tuple.
+	* src/plugins/FtmStyleDescendants.py: Register options as a tuple.
+	* src/plugins/IndivComplete.py:  Register options as a tuple.
+	* src/plugins/IndivSummary.py: Register options as a tuple.
+	* src/plugins/SimpleBookTitle.py: Register options as a tuple.
+	
 2003-07-05  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/ImageSelect.py: eliminate recursive error loop when a thumbnail
 	cannot be created.
